src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */
:root,
.nlds-theme {
  /* Override pixel values from Figma */
  --utrecht-heading-1-line-height: 1.1;
  --utrecht-heading-2-line-height: 1.3;
  --utrecht-heading-3-line-height: 1.3;
  --utrecht-heading-4-line-height: 1.4;

  --nlds-blog-post-footer-background-color: #f2ebe4;

  --nlds-navbar-link-active-border-color: #148839;

  -webkit-font-smoothing: auto !important;
  -moz-osx-font-smoothing: auto !important;
  --ifm-container-width: 1030px;
  --ifm-container-width-xl: 1080px;
  --ifm-link-hover-color: currentColor;
  /* --docusaurus-announcement-bar-height: 50px; */
}
.container--narrow {
  --ifm-container-width: 784px;
  --ifm-container-width-xl: var(--ifm-container-width);
}

.utrecht-unordered-list {
  list-style-type: square;
}

.utrecht-unordered-list .utrecht-unordered-list__item::marker {
  content: "◼";
  font-size: 16px;
}

.button {
  box-shadow: 4px 4px 0 rgb(0 0 0 / 10%);
  padding-block-start: var(--utrecht-button-padding-block-start);
  padding-block-end: var(--utrecht-button-padding-block-end);
  padding-inline-end: calc(8px + var(--utrecht-button-icon-size) + var(--utrecht-button-padding-inline-end));
  padding-inline-start: var(--utrecht-button-padding-inline-start);
  font-size: var(--utrecht-button-font-size);
  line-height: var(--utrecht-button-line-height);
  position: relative;
  border: none;
}

.button.button--primary {
  --ifm-button-background-color: #148839;
  --ifm-button-color: #fff;
  border-color: #148839;
}

.button--primary::after {
  content: " ";
  position: absolute;
  display: block;
  right: 0;
  top: 0;
  bottom: 0;
  width: var(--gc-button-icon-size);
  background-color: #0b732c;
  background-image: url("../icons/arrow-right-white.svg");
  background-size: 10px 16px;
  background-repeat: no-repeat;
  transition: background-color 0.2s;
  background-position: center;
}

.button.button--primary:hover {
  background-color: #0b732c;
}

.button--primary:hover::after {
  background-color: #055c21;
}

.button.button--secondary {
  color: #004152;
}

.button--secondary::after {
  content: " ";
  position: absolute;
  display: block;
  right: 0;
  top: 0;
  bottom: 0;
  width: 32px;
  background-color: #d1dfe3;
  background-image: url("../icons/arrow-right-blue.svg");
  background-size: 10px 16px;
  background-repeat: no-repeat;
  transition: background-color 0.2s;
  background-position: center;
}

.button.button--secondary:hover {
  background-color: #004152;
  color: white;
  border-color: #004152;
}

.button--secondary:hover::after {
  background-color: #00303d;
  background-image: url("../icons/arrow-right-white.svg");
}

.footer {
  width: 100%;
  padding-block: 16px;
}

.footer--dark {
  --ifm-footer-background-color: #00303d;
  --ifm-footer-color: white;
  --ifm-footer-link-hover-color: white;
}

.footer__items {
  list-style: none;
  margin-bottom: 0;
  padding-left: 0;
  display: grid;
  grid-auto-flow: column;
  justify-content: flex-start;
  gap: 36px;
}

.footer__links {
  justify-content: space-between;
}

.footer__links .col {
  flex: none;
  width: fit-content;
}

.footer__link-item svg {
  display: none;
}

.footer__items {
  list-style: none;
  margin-bottom: 0;
  padding-left: 0;
  display: grid;
  grid-auto-flow: column;
  justify-content: flex-start;
  gap: 36px;
}

.footer__links {
  justify-content: space-between;
}

.footer__links .col {
  flex: none;
  width: fit-content;
}

.footer__link-item svg {
  display: none;
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme="dark"] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

/* Overwrite docusaurus styling but use the classname to enable lookup for content position by docusaurus */
.navbar {
  display: unset;
  height: auto;
  padding: 0;
  --ifm-link-hover-decoration: none;
}

.navbar__link {
  --utrecht-link-text-decoration: none;
  --utrecht-link-color: currentColor;
  --utrecht-link-focus-color: #00303d;
  font-size: 18px;
  position: relative;
  text-decoration: none;
}

/* FIXME: when the navbar is custom this should be simpler. Currently the home link is always active */
.navbar__link--active:not(.navbar__brand, .utrecht-button-link),
.navbar__link:not(.utrecht-button-link):hover {
  border-block-end-style: solid;
  border-block-end-width: 4px;
  border-block-end-color: var(--nlds-navbar-link-active-border-color, transparent);
  border-block-start-style: solid;
  border-block-start-width: 4px;
  border-block-start-color: transparent;
}

.navbar--dark {
  --ifm-navbar-background-color: var(--nlds-page-header-background-color);
  --ifm-navbar-link-hover-color: white;
  --ifm-menu-color-active: white;
}

.navbar__inner {
  min-height: 64px;
  align-items: center;
  flex-wrap: nowrap;
}
.table-of-contents {
  font-size: 18px;
}

.nlds-theme {
  min-height: 100vh;
  align-content: inherit;
  font-weight: 400;
}

.main-layout {
  display: grid;
  grid-template-areas:
    "skip-link"
    "announcement-bar"
    "header"
    "main-content"
    "footer";
  grid-template-rows: auto auto auto 1fr auto;
}

[aria-label="Ga naar hoofdinhoud"] {
  grid-area: skip-link;
}

.navbar {
  grid-area: header;
}

.main-wrapper {
  grid-area: main-content;
}

.footer {
  grid-area: footer;
}

.mega-footer-link,
.homepage-hero__description_src-components-HomepageHero-module a {
  /* Add white foreground color and underline to links in hero and footer */
  color: white;
  text-decoration: underline;
}

.homepage-hero_src-components-HomepageHero-module {
  --ifm-h1-font-size: var(--utrecht-heading-3-font-size);
}
/* ... */

